--- a/src/components/gameSectionRock/gameSectionRock.css
+++ b/src/components/gameSectionRock/gameSectionRock.css
@@ -43,9 +43,22 @@
   max-width: 170px;
   cursor: pointer;
 }
+.resultIcons img {
+  width: 200px;
+}
 
 @media (max-width: 1100px) {
-  .gameSectionRock h2 {
-    font-size: 30px;
+  .rock-paper-scissors h2 {
+    font-size: 35px;
+  }
+  .divPlayer p,
+  .divComputer p {
+    font-size: 90px;
+  }
+  .divCounter h3 {
+    font-size: 20px;
+  }
+  .resultIcons img {
+    width: 100px;
   }
 }
